# pg-logidater

./: .gitignore  Makefile  README.md  pyproject.toml  setup-env.sh  setup.cfg
pg_logidater/: cli.py  exceptions.py  master.py  replica.py  sqlqueries.py  tartget.py  utils.py
